2007-01-16  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/filetree.cc (regexxer_create_file_tree): Prefix function
	signature with G_MODULE_EXPORT, as this will probably be required
	on Windows to enable dynamic loading.
	* src/statusline.cc (regexxer_create_status_line): Ditto.

2007-01-16  Daniel Elstner  <daniel.kitta@gmail.com>

	* m4/dk-warn.m4 (DK_ARG_ENABLE_WARNINGS): Accept a fourth argument
	which can be used to generate -DMODULE_DISABLE_DEPRECATED defines
	by specifying a list of module prefixes.  These flags are produced
	only in --enable-warnings=fatal mode, in order to avoid breaking
	the default build if new deprecations appear in some module.

	* configure.ac (REGEXXER_WARNING_FLAGS): List the module prefixes
	GLIBMM and GTKMM in the fourth argument to DK_ARG_ENABLE_WARNINGS.
	* Makefile.am (global_defs): Remove -D*_DISABLE_DEPRECATED flags,
	since they are now included in $(REGEXXER_WARNING_FLAGS).

2007-01-16  Daniel Elstner  <daniel.kitta@gmail.com>

	* Makefile.am (ui/stockimages.h): Accept backslash '\' as directory
	separator in filenames, in addition to the forward slash '/'.  You
	can never know.

2007-01-15  Daniel Elstner  <daniel.kitta@gmail.com>

	* MAINTAINERS: Add my real name.

2007-01-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/translation.{cc,h} (Util::compose_argv): New function with
	the functionality of compose_impl() but using a format string of
	type const char*.  This implementation operates on bytes instead of
	Unicode code points, and copies the chunks between placeholders in
	one go instead of each character separately.
	(Util::compose): Call compose_argv() instead of compose_impl()
	and change the type of the format argument to const char* because
	the format string really should be a string literal.  Also, inline
	all of these overloads since they just forward their arguments to
	compose_argv() anyway, so that inlining actually reduces code size.

2007-01-14  Daniel Elstner  <daniel.kitta@gmail.com>
